# broken-fileset

./: README.md  flake.nix
common/mypkg-fileset/: default.nix
common/mypkg-src/: default.nix  setup.cfg
