[metadata]
name = mypkg
version = attr: mypkg.__version__
license = MIT
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop

[options]
zip_safe = False
python_requires = >= 3.8
include_package_data = True
